--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 body {
+  height: 100%;
   font-family: 'Noto Sans JP', sans-serif;
   display: flex;
   background: linear-gradient(#7abed1, #9BD7D5);
