--- a/index.css
+++ b/index.css
@@ -1,5 +1,11 @@
+html {
+    height: 100%;
+}
 body {
   height: 100%;
+  margin: 0;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   font-family: 'Noto Sans JP', sans-serif;
   display: flex;
   background: linear-gradient(#7abed1, #9BD7D5);
